services/fung/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fung
  labels:
    name: fung
    app: fung
