services/fung/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fung
  namespace: fung
  labels:
    app: fung
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: fung
